docs/index.css
/* ... */
 .visually-hidden {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
     height: 1px;
     overflow: hidden;
     position: absolute;
     white-space: nowrap;
     width: 1px;
     top: 0;
     left: 0;
 }
 .cmd span.cmd-end-line,
 .cmd span.cmd-end-line span,
 .cmd div.cmd-end-line span[data-text]:last-child,
 .cmd div.cmd-end-line span[data-text]:last-child span,
 .cmd textarea,
 .cmd .cursor + span:empty {
     -webkit-touch-callout: none; /* iOS Safari */
       -webkit-user-select: none; /* Safari */
        -khtml-user-select: none; /* Konqueror HTML */
          -moz-user-select: none; /* Firefox */
           -ms-user-select: none; /* Internet Explorer/Edge */
               user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
 }
 .terminal img, .terminal audio, .terminal object, .terminal canvas {
     cursor: default;
 }
 .terminal {
     position: relative;
     line-height: initial;
     --base-background: var(--background, #000);
     --base-color: var(--color);
     contain: content;
 }
 .terminal-scroller {
     position: relative;
     overflow-y: auto;
     scrollbar-gutter: stable;
     height: 100%;
     box-sizing: border-box;
 }
 terminal.terminal-temp {
     visibility: hidden;
 }
 body.terminal {
     min-height: 100vh;
     height: 100%;
 }
 html {
     height: 100%;
 }
 body.terminal, body.full-screen-terminal {
     margin: 0;
     height: 100%;
 }
 body.full-screen-terminal .terminal {
     height: 100%;
 }
 .terminal > div.terminal-fill {
     min-height: 100%;
     height: 100%;
 }
 .terminal > .terminal-pixel {
     position: absolute;
     display: inline;
     left: -2px;
     top: -2px;
     width: 1px;
     height: 1px;
 }
 .terminal > .terminal-resizer,
 .terminal > .terminal-font .terminal-resizer {
     position: absolute !important;
     top: 0 !important;
     right: 0 !important;
     bottom: 0 !important;
     left: 0 !important;
     overflow: hidden !important;
     pointer-events: none !important;
     z-index: -1 !important;
     height: 100% !important;
     border: none !important;
     padding: 0 !important;
     width: 100% !important;
 }
 .cmd {
     padding: 0;
     position: relative;
     width: 100%;
     z-index: 300;
 }
.terminal, .cmd {
    overflow-wrap: break-word;
    max-width: 100%;
}
 .terminal .cmd, .terminal .cmd div {
     background: transparent !important;
 }
 .terminal a[tabindex="1000"],
 .terminal a[tabindex="1000"]:active,
 .terminal a[tabindex="1000"]:focus {
     outline: none;
 }
 .terminal .inverted, .cmd.cmd.cmd .inverted,
 .terminal .terminal-inverted, .cmd.cmd.cmd .cmd-inverted {
     background-color: #aaa !important;
     color: #000 !important;
 }
 .terminal .terminal-output > :not(.raw) a[href],
 .cmd a[href],
 .terminal.external a[href] {
     color: #3377FF;
     color: var(--link-color, #3377FF);
     cursor: pointer;
 }
 .cmd a[href]:not(.terminal-inverted),
 .terminal .terminal-output > :not(.raw) a[href]:not(.terminal-inverted),
 .terminal.external a[href]:not(.terminal-inverted) {
     --color: var(--link-color, #3377FF);
     /* conditionals: https://www.kizu.ru/conditions-for-css-variables/ */
     /* --glow: 0; */
     text-shadow: 0 0 calc(var(--glow) * 5px) var(--color, #ccc);
 }
 .terminal .terminal-output > :not(.raw) a[href].terminal-inverted,
 .terminal.external a[href].terminal-inverted {
     background: var(--color, #ccc);
     /* conditionals: https://www.kizu.ru/conditions-for-css-variables/ */
     /* --glow: 0; */
     text-shadow: 0 0 calc(var(--glow) * 5px) var(--background, #000);
 }
 .terminal .terminal-output > :not(.raw) a[href]:hover,
 .cmd a[href]:hover,
 .terminal.external a[href]:hover {
     background-color: #3377FF;
     background-color: var(--link-color, #3377FF) !important;
     color: #000;
     color: var(--base-background, #000) !important;
     text-decoration: none;
 }
 .terminal .terminal-output > :not(.raw) a[href] span,
 .cmd a[href] span,
 .terminal.external a[href] span {
     /*
      * shorter and simple solution
      * it's hard to overwrite long :not selector (:not(a span) don't work)
      */
     color: #3377FF !important;
     --color: var(--link-color, #3377FF);
     color: var(--link-color, #3377FF) !important;
     text-decoration: underline;
 }
 .terminal .terminal-output > :not(.raw) a[href]:hover span,
 .cmd a[href]:hover span,
 .terminal.external a[href]:hover span {
     background-color: #3377FF !important;
     background-color: var(--link-color, #3377FF) !important;
     color: #000 !important;
     color: var(--background, #000) !important;
     text-decoration: none;
 }
 .terminal a[href] {
     transition-property: color, background-color;
     transition-duration: 0.2s;
     transition-timing-function: ease-out;
 }
 .cmd .cmd-cursor {
     display: inline-block;
 }
 .cmd .cmd-cursor-line > span,
 .cmd .cmd-cursor-line img {
     display: inline-block;
 }
 .cmd .cmd-cursor.cmd-blink > span[data-text]:not(.emoji):not(.fa):not(.far):not(.fas) span,
 .cmd .cmd-cursor.cmd-blink a,
 .cmd .cmd-cursor.cmd-blink .fa,
 .cmd .cmd-cursor.cmd-blink .far,
 .cmd .cmd-cursor.cmd-blink .fas,
 .cmd .cmd-cursor .emoji {
         -webkit-animation: terminal-blink 1s infinite linear;
            -moz-animation: terminal-blink 1s infinite linear;
             -ms-animation: terminal-blink 1s infinite linear;
                 animation: terminal-blink 1s infinite linear;
 }
 .bar.terminal .inverted, .bar.cmd .cmd-inverted {
     box-shadow: -2px 0 0 -1px #aaa;
     box-shadow: -2px 0 0 -1px var(--original-color, #aaa);
 }
 .terminal, .terminal .terminal-output > div > div, .cmd .cmd-prompt {
     display: block;
     height: auto;
 }
 .terminal .terminal-output > div:not(.raw) div {
     white-space: normal;
     clear: both;
 }
 .cmd .cmd-prompt > span, .cmd .cmd-prompt > a, .cmd .cmd-prompt:empty {
     float: left;
 }
 .cmd-prompt [data-text] > span {
     white-space: pre;
 }
/* ... */

